--- a/PawellsMusicEditor/packages/repositories.config
+++ b/PawellsMusicEditor/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DevBridge.Templates.WebProject.Data\packages.config" />
+  <repository path="..\DevBridge.Templates.WebProject.DataContracts\packages.config" />
+  <repository path="..\DevBridge.Templates.WebProject.DataEntities\packages.config" />
   <repository path="..\PawellsMusicEditor\packages.config" />
 </repositories>
