--- a/PawellsMusicEditor/PawellsMusicEditor/Web.config
+++ b/PawellsMusicEditor/PawellsMusicEditor/Web.config
@@ -13,8 +13,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
-  <system.web>
-    
+  <system.web>   
     <httpRuntime targetFramework="4.5" />
     
     <compilation debug="true" targetFramework="4.5" />
@@ -30,7 +29,13 @@
       </namespaces>
     </pages>
   </system.web>
-
+  <connectionStrings>
+    <add name="ConnectionToMusicEditorDB"
+       providerName="System.Data.SqlClient"
+       connectionString="Serber=ADMINISTRATORIU;
+                          Database=MusicEditor;
+                          Trusted_Connection = True" />
+  </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
      
