--- a/PawellsMusicEditor/SoundTrackChanges/packages.config
+++ b/PawellsMusicEditor/SoundTrackChanges/packages.config
@@ -4,5 +4,7 @@
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
+  <package id="NAudio" version="1.7.1" targetFramework="net45" />
+  <package id="NAudio.Lame" version="1.0.2" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
 </packages>
